github-actions/templates/httproute.gotmpl.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: github-actions-webhook-public-route
spec:
  parentRefs:
    - name: public-ingress-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: infra-network
  hostnames:
    - webhook.gha.karafra.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        # infra-cicd-github-actions-actions-runner-controller-webhook
        - name:  'infra-cicd-github-actions-actions-runner-controller-github-webh.infra-cicd.svc.cluster.local'
          group: ''
          kind: Service
          port: 80
          weight: 1
